fix: fixed modal body padding issue (#244)
* fix: fixed modal body padding issue

- Cross browser detect whether there is a scrollbar present on the body - ie9 +
- Apply `padding-right: 15px;` to body only when above is true, otherwise just prevent scroll with `overflow: hidden;`

* fix: corrected classname

--- a/packages/component-library/draft/Kaizen/Modal/Primitives/GenericModal.scss
+++ b/packages/component-library/draft/Kaizen/Modal/Primitives/GenericModal.scss
@@ -97,6 +97,9 @@
 
 .unscrollable {
   overflow: hidden !important;
+}
+
+.pseudoScrollbar {
   padding-right: 15px !important;
 }
 
